# vkpt

./: .gitignore  Cargo.toml  build.rs  test.py
shader_bin/: clear.comp.spv  postprocess.comp.spv  raytrace.rchit.spv  raytrace.rgen.spv  raytrace.rmiss.spv  test.rcall.spv
shader_include/: definitions.glsl  microfacet.glsl  random.glsl  util.glsl
shader_src/: constant.rmiss  constant_sample.rcall  env_sample_spherical.rcall  env_spherical.rmiss  lambertian.rcall  lambertian_evaluate.rcall  lambertian_sample.rcall  microfacet_evaluate.rcall  microfacet_sample.rcall  ms_dupuy_sample.rcall  ms_heitz_evaluate.rcall  ms_heitz_sample.rcall  ms_sample.rcall  ms_sample_dupuy.rcall  ms_sample_heitz.rcall  multiscatter_sample.rcall  postprocess.comp  raytrace.rchit  raytrace.rgen  raytrace.rmiss  shadow.rmiss  spherical.rmiss  spherical_sample.rcall  ss_evaluate.rcall  ss_ndf_sample.rcall  ss_sample_ndf.rcall  ss_sample_uniform.rcall  ss_sample_vndf.rcall  ss_vndf.rcall  ss_vndf_sample.rcall  test.rcall
src/: acceleration.rs  context.rs  descriptor.rs  main.rs  mesh.rs  output.rs  pipeline.rs  resource.rs  scene.rs  shader_binding_table.rs  surface.rs  uploader.rs  util.rs
src/scene/: camera.rs  gltf_load.rs  light.rs  material.rs  mesh.rs
