[package]
name = "vkpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = { version = "0.37.3", features = ["linked"] }
gltf = "1.4.0"
gpu-allocator = { version = "0.24.0", default-features = false, features = ["ash", "vulkan"] }
image = "0.24.7"
itertools = "0.12.0"
nalgebra = "0.32.3"
renderdoc = "0.11.0"
serde_json = "1.0.114"
winit = "0.29.7"

[build-dependencies]
shaderc = "0.8"
anyhow = "1.0.79"

